--- a/haitao-product-service/src/main/resources/application.properties
+++ b/haitao-product-service/src/main/resources/application.properties
@@ -3,7 +3,7 @@ server.port= 8082
 spring.application.name= provider-product
 spring.datasource.username= root
 spring.datasource.password= yu903904758
-spring.datasource.url= jdbc:mysql://47.97.204.227:3306/haitao?useUnicode=true&characterEncoding=UTF-8&serverTimezone=UTC&verifyServerCertificate=false&useSSL=false
+spring.datasource.url= jdbc:mysql://120.76.62.123:3306/haitao?useUnicode=true&characterEncoding=UTF-8&serverTimezone=UTC&verifyServerCertificate=false&useSSL=false
 spring.datasource.type= com.alibaba.druid.pool.DruidDataSource
 spring.datasource.driver-class-name= com.mysql.jdbc.Driver
 #等待连接获取的最大超时时间
@@ -27,7 +27,7 @@ eureka.instance.prefer-ip-address= true
 
 #info信息配置
 #app名称
-info.app.name= mostimes-product
+info.app.name= mostimes-haitao
 #公司名称
 info.company.name= www.mostimes.com
 #模块名称
@@ -36,7 +36,7 @@ info.build.artifactId= ${project.artifactId}
 info.build.version= ${project.version}
 
 #redis配置
-spring.redis.host= 120.76.62.123
+spring.redis.host= 47.97.204.227
 #redis端口
 spring.redis.port=6379
 #默认库
