父类---控制依赖版本

--- a/haitao-parent/pom.xml
+++ b/haitao-parent/pom.xml
@@ -14,6 +14,7 @@
     <artifactId>haitao-parent</artifactId>
     <version>1.0-SNAPSHOT</version>
     <packaging>pom</packaging>
+    <name>parent</name>
 
     <properties>
         <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
