--- a/haitao-product-web/src/main/resources/application.properties
+++ b/haitao-product-web/src/main/resources/application.properties
@@ -1,6 +1,6 @@
 server.port= 8072
 
-#false表示不向注册中心注册自己
+#表示不向注册中心注册自己
 eureka.client.register-with-eureka= false
 #设置与Eureka Service交互的地址查询服务和注册服务
 eureka.client.serviceUrl.defaultZone=http://47.97.204.227:7001/eureka/
